--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,21 @@ server.port = 8084
 spring.main.allow-bean-definition-overriding=true
 spring.application.name = ACCOUNTING-SERVICE
 spring.config.import=configserver:http://localhost:8087
-app.db.bucketName = salary
+app.db.bucketName = Salary
 
+management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=always
+management.health.circuitbreakers.enabled=true
 
+resilience4j.circuitbreaker.instances.calculatesalaryBreaker.register-health-indicator=true
+resilience4j.circuitbreaker.instances.calculatesalaryBreaker.event-consumer-buffer-rate = 10
+resilience4j.circuitbreaker.instances.calculatesalaryBreaker.failure-rate-threshold=50
+resilience4j.circuitbreaker.instances.calculatesalaryBreaker.minimum-number-of-calls=5
+resilience4j.circuitbreaker.instances.calculatesalaryBreaker.automatic-transition-from-open-to-half-open-enabled=true
+resilience4j.circuitbreaker.instances.calculatesalaryBreaker.wait-duration-in-open-state=5s
+resilience4j.circuitbreaker.instances.calculatesalaryBreaker.permitted-number-of-calls-in-half-open-state=3
+resilience4j.circuitbreaker.instances.calculatesalaryBreaker.sliding-window-size=10
+resilience4j.circuitbreaker.instances.calculatesalaryBreaker.sliding-window-type=count_based
 
 #eureka.client.serviceUrl.defaultZone  = http://localhost:8761/eureka
 #eureka.client.fetchRegistry  = true
